--- a/project.properties
+++ b/project.properties
@@ -11,5 +11,8 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-22
-android.library.reference.1=../android-support-v7-appcompat
+target=android-23
+android.library.reference.1=..\\android-support-v7-appcompat
+android.library.reference.2=..\\android-support-v7-recyclerview
+android.library.reference.3=..\\android-support-v7-preference
+android.library.reference.4=..\\android-support-design
