--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	package="kr.KENNYSOFT.Student"
-	android:versionCode="20"
-	android:versionName="1.5.0"
+	android:versionCode="21"
+	android:versionName="1.6.0"
 	android:installLocation="auto" >
-	
+
 	<uses-sdk
 		android:minSdkVersion="7"
 		android:targetSdkVersion="23" />
@@ -27,6 +27,9 @@
 		android:allowBackup="true"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name" >
+		<meta-data
+			android:name="com.sec.android.support.multiwindow"
+			android:value="true" />
 		<activity
 			android:name=".Student"
 			android:label="@string/app_name"
@@ -35,6 +38,7 @@
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
+				<category android:name="android.intent.category.MULTIWINDOW_LAUNCHER" />
 			</intent-filter>
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
