--- a/project.properties
+++ b/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=android-23
-android.library.reference.1=..\\android-support-v7-appcompat
-android.library.reference.2=..\\android-support-v7-recyclerview
-android.library.reference.3=..\\android-support-v7-preference
-android.library.reference.4=..\\android-support-design
+android.library.reference.1=../android-support-design
+android.library.reference.2=../android-support-v7-appcompat
+android.library.reference.3=../android-support-v7-preference
+android.library.reference.4=../android-support-v7-recyclerview
